[gd_scene load_steps=3 format=3 uid="uid://56rnymkl2mm1"]

[ext_resource type="Script" path="res://Scripts/Card.gd" id="1_g6xq8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_207la"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[node name="Card" type="Node2D"]
script = ExtResource("1_g6xq8")

[node name="CardRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardFrame" type="Panel" parent="CardRoot"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_207la")

[node name="CardImage" type="TextureRect" parent="CardRoot"]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 190.0
offset_bottom = 188.0
expand_mode = 2
stretch_mode = 5

[node name="NameLabel" type="Label" parent="CardRoot"]
layout_mode = 0
offset_left = 12.0
offset_top = 200.0
offset_right = 188.0
offset_bottom = 245.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Name
"
horizontal_alignment = 1

[node name="RarityLabel" type="Label" parent="CardRoot"]
layout_mode = 0
offset_left = 16.0
offset_top = 240.0
offset_right = 187.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 24
text = "Rarity
"
horizontal_alignment = 1
